fix header z-index

--- a/apps/frontend/src/layout/presentation/styles/page-header.css
+++ b/apps/frontend/src/layout/presentation/styles/page-header.css
@@ -4,6 +4,7 @@
     align-items: center;
     border-bottom: 1px solid var(--color-neutral-020);
     background-color: #fff;
+    z-index: 4;
 }
 
 .PageHeader .LogoHeader {
